# stycmake

./: .gitignore
Step/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
Step/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
